# cx-foo

./: .gitignore  CMakeLists.txt  CMakePresets.json  GLOB_RECURSE  README.md
cmake/: config.cmake.in  helper.cmake  utils.cmake
data/: README.md
docs/: README.md
src/cx_foo/: cx_foo.cc  cx_foo.h
src/cx_foo/include/cx_foo/: cx_foo.h
src/cx_foo_client/: main.cc
src/cx_foo_exe/: main.cc
src/cx_queue/: BaseQueue.cc  BaseQueue.h  QueueContainer.cc  QueueContainer.h
src/cxfoo/: cx_foo.cc  cx_foo.h  cxfoo.cc
src/cxfoo/include/cxfoo/: cxfoo.h  cxfoo_export.h
src/cxfoo_cli/: main.cc
src/cxfoo_client/: main.cc
tests/: basic_test.cc
tools/: util.cmake
